Upgrade NestJS and Nestia with standard schema validation
